--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
 	"compilerOptions": {
 		"target": "es2022",
-		"module": "node16",
+		"module": "ES2022",
 		"composite": true,
 		"declarationMap": true,
 		"esModuleInterop": true,
 		"lib": ["ES2022", "DOM"],
-		"moduleResolution": "node16",
+		"moduleResolution": "Node",
 		"rootDir": ".",
 		"outDir": "build",
 		"allowSyntheticDefaultImports": true,
