--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 		"module": "ES2022",
 		"composite": true,
 		"declarationMap": true,
+		"declaration": true,
 		"esModuleInterop": true,
 		"lib": ["ES2022", "DOM"],
 		"moduleResolution": "Node",
